<resources>
    <string name="app_name">Ceres</string>
    <string name="titulo_cadastro"> BEM VINDO AO CERES! </string>
    <string name="mensagem_cadastro">Bem-Vindo ao cadastro de cliente do Ceres</string>
    <string name="nome_cadastro">Insira seu Nome Completo </string>
    <string name="fone_cadastro">Digite seu Telefone </string>
    <string name="cpf_cadastro">Informe seu CPF </string>
    <string name="cep_cadastro">Informe seu CEP </string>
    <string name="email1">Digite seu E-mail </string>
    <string name="email2">Confirme seu E-Mail </string>
    <string name="senha1">Digite sua Senha</string>
    <string name="senha2">Confirme sua Senha </string>
    <string name="b_criar_conta">Não possui conta ? Crie uma! </string>
</resources>