<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Tela_Cadastro">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/titulo_cadastro"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FF5722" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="TextView"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:text="@string/nome_cadastro"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/caixa_nome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Nome" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/cpf_cadastro"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/caixa_cpf"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="CPF" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/cep_cadastro"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/caixa_cep"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="CEP" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/fone_cadastro"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/caixa_fone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:gravity="center"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/email1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/caixa_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/senha1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/caixa_senha1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/senha2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/caixa_senha2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/b_cadastrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="Cadastrar"
        app:backgroundTint="#FF5722" />

    <Button
        android:id="@+id/b_voltar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="Voltar"
        app:backgroundTint="#FF5722" />
    <!---
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        app:srcCompat="@drawable/ceres" />
    -->
</LinearLayout>