<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layoutDescription="@xml/tela_inicial_scene">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ceres" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:text="@string/titulo_cadastro"
        android:textColor="#FF5722"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="A"
        android:textSize="24sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:text="@string/email1"
        android:textColor="#FF5722"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/c_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Nome" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:text="@string/senha1"
        android:gravity="center"
        android:textColor="#FF5722"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/c_senha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Senha" />

    <Button
        android:id="@+id/b_entrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:gravity="center"
        android:text="Entrar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="A"
        android:textSize="24sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/b_criar_conta"
        android:textSize="18sp" />

    <Button
        android:id="@+id/b_criar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:gravity="center"
        android:text="Criar" />

</LinearLayout>